# statistical-inference-modeling

./: .gitignore  README.md  pyproject.toml
notebooks/week1/: goodness_of_fit.ipynb  week1.ipynb
notebooks/week2/: goodness_of_fit.ipynb
notebooks/week3/: hypothesis_testing_and_response_prediction.ipynb
notebooks/week4/: model-fitting-and-non-linear-regression.ipynb
notebooks/week5/: 01_week5.ipynb  02_week5.ipynb
notebooks/week6/: 01_week6.ipynb  02_week6.ipynb
notebooks/week7/: 01_week7.ipynb
