[project]
name = "statistical-inference-modeling"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pandas-stubs>=3.0.0.260204",
    "protobuf>=6.33.5",
    "scipy-stubs>=1.17.0.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tabulate>=0.9.0",
]
